--- a/src/client/css/index.css
+++ b/src/client/css/index.css
@@ -19,6 +19,9 @@
     var(--colorAccent) 100%
   );
 
+  --colorLightGradient: linear-gradient(180deg, #00a3ff 0%, #77cdff 100%);
+  --colorDarkGradient: linear-gradient(180deg, #102031 0%, #173455 100%);
+
   --sizeRadius: 10px;
   --sizeFont: 16px;
   --sizeSmallFont: 14px;
@@ -446,7 +449,7 @@ input[type="color"] {
   opacity: 1;
   transition: opacity 1s;
   background: var(--colorAccentSecondary);
-  background: var(--colorMainGradient);
+  background: var(--colorLightGradient);
   width: 100%;
   height: 100%;
   position: absolute;
